--- a/features.css
+++ b/features.css
@@ -86,6 +86,9 @@ font-size: 38px;
 .cta-section{
 background-color: rgb(165, 50, 27);
 }
+.cta-section1 {
+  background-color: rgb(255, 255, 255);
+}
 .custom-btn {
 background-color: #b14814; 
 border-color: #b14814;     
@@ -105,14 +108,6 @@ background-color: #6be69e;
 border-color: #6be69e;     
 } 
 
-.profile-icon {
-
-  border-radius: 50%;
-
-  font-size: 1.25rem; /* Adjust icon size */
-  /* Example color for the icon */
-  vertical-align: middle;
-}
 
 @media(min-width:699px){
 .hero {
